# nes_emulator

./: .gitmodules  Cargo.toml  LICENSE.md  README.md
references/: instruction_ref.rs  ref.md
src/: addressing_mode.rs  bus.rs  cpu.rs  lib.rs  opcode.rs  ppu.rs
src/cpu/: cpuflags.rs  instructions.rs  memory.rs  opcode_array.rs
src/opcode/: mnemonic.rs
