[package]
name = "nes_emulator"
description = "A nes emulator following the tutorial 'https://bugzmanov.github.io/nes_ebook/chapter_1.html'"
license-file = "LICENSE.md"
repository = "https://github.com/Logan-Jerrow/nes_emulator"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.11"
once_cell = "1.17.1"
sdl2 = "0.35.2"
rand = "0.8"
bitflags = "1.3.2"
